2008-01-31  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el: Partially revert 2007-11-10 change.

2008-01-31  Martin Rudalics  <rudalics@gmx.at>

	* mail/rmail.el (rmail-highlight): Fix specification.
        Reported by: pod <pod@herald.ox.ac.uk>.

2008-01-31  Jason Rumney  <jasonr@gnu.org>

	* term/w32-win.el (image-library-alist): Prefer libxpm.dll.

2008-01-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-set-format-regexp): New constant.
	(gdb-var-set-format-handler): New function.
	(gdb-var-set-format): Use it.

2008-01-29  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-langs.el (c-block-stmt-1-kwds, c-block-stmt-2-kwds)
	(c-simple-stmt-kwds): New Objective C keywords: @finally, @try,
	@catch, @synchronized, @throw.

	* progmodes/cc-langs.el (c-specifier-key): Exclude "template"
	from this regexp; part of same fix as next change to cc-engine.el.

	* progmodes/cc-engine.el (c-guess-basic-syntax, CASE 5A.5): Anchor
	the "{" of a template function correctly on "template", not the
	following "<".

	* progmodes/cc-defs.el (c-version): Increase to 5.31.5.

2008-01-29  Richard Stallman  <rms@gnu.org>

	* progmodes/etags.el (tags-query-replace): Delete unused optional args.
	Doc fix.

	* files.el (hack-local-variables): Don't query about fake variables.

2008-01-27  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-create-define-alist): Don't call
	gdb-cpp-define-alist-program if file is nil (currently only
	" *partial-output-...").

2008-01-27  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-awk.el, progmodes/cc-engine.el: Correct typos,
	enhance comments.

2008-01-27  Richard Stallman  <rms@gnu.org>

	* allout.el: Many doc fixes.
	(allout-encrypt-string): Fix error message.

2008-01-26  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-hanging-braces-alist): New element for
	arglist-cont-nonempty.

	* progmodes/cc-cmds.el (c-brace-newlines): Determine the newlines
	for a brace with syntax arglist-cont-nonempty.
