@@ -1,3 +1,11 @@
+2008-02-01  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* progmodes/verilog-mode.el (verilog-sk-prompt-msb)
+	(verilog-sk-module, verilog-sk-function, verilog-sk-begin)
+	(verilog-sk-if, verilog-sk-wire, verilog-sk-for)
+	(verilog-sk-state-machine): Quote all calls to
+	"auxiliary skeleton"s to prevent infloops.
+
 2008-01-31  Jason Rumney  <jasonr@gnu.org>
 
 	* w32-fns.el: Partially revert 2007-11-10 change.
